Bug 415257 - Changing status of an investment transaction clears bank ID
Summary: Changing status of an investment transaction clears bank ID
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-16 18:43 UTC by Thomas Baumgart
Modified: 2019-12-16 19:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-12-16 18:43:36 UTC
SUMMARY
Setting the reconciliation state to cleared on an investment transaction clears the bank ID of the split.

STEPS TO REPRODUCE
1. Import dividend transaction via OFX
2. Edit the transaction
3. Set status to cleared
4. Save transaction

OBSERVED RESULT
The bank id contained in the split is removed

EXPECTED RESULT
The bank id remains untouched

ADDITIONAL INFORMATION
This may require a specific OFX file
Comment 1 Thomas Baumgart 2019-12-16 19:53:45 UTC
Git commit de6d2425c6f17f3e98e10e93fedcad2707a30e08 by Thomas Baumgart.
Committed on 16/12/2019 at 19:53.
Pushed by tbaumgart into branch '5.0'.

Keep values stored in splits when editing invest transactions

Values stored in splits provided e.g. by online banking plugins were
erased when a transaction was edited.

This change make sure that this information is remained unmodified.
FIXED-IN: 5.0.8

M  +7    -0    kmymoney/dialogs/investactivities.cpp

https://commits.kde.org/kmymoney/de6d2425c6f17f3e98e10e93fedcad2707a30e08
Comment 2 Thomas Baumgart 2019-12-16 19:54:34 UTC
Git commit e7fbbf3373fadbe36175d8a9483d4c65d2295e8d by Thomas Baumgart.
Committed on 16/12/2019 at 19:54.
Pushed by tbaumgart into branch 'master'.

Keep values stored in splits when editing invest transactions

Values stored in splits provided e.g. by online banking plugins were
erased when a transaction was edited.

This change make sure that this information is remained unmodified.
FIXED-IN: 5.0.8
(cherry picked from commit de6d2425c6f17f3e98e10e93fedcad2707a30e08)

M  +7    -0    kmymoney/dialogs/investactivities.cpp

https://commits.kde.org/kmymoney/e7fbbf3373fadbe36175d8a9483d4c65d2295e8d