Keep values stored in splits when editing invest transactions

Values stored in splits provided e.g. by online banking plugins were
erased when a transaction was edited.

This change make sure that this information is remained unmodified.

BUG: 415257
FIXED-IN: 5.0.8
(cherry picked from commit de6d2425c6f17f3e98e10e93fedcad2707a30e08)